fixed content width on mobile

--- a/src/Contact.css
+++ b/src/Contact.css
@@ -11,3 +11,9 @@
 #contact_container .row{
     margin-bottom: 40px;
 }
+
+@media (max-width: 1600px) {
+    #exp_container {
+        width: 90%;
+    }
+}
